# weather

weather_dashboard/: CMakeLists.txt  Makefile  weather_dashboard  wget-log
weather_dashboard/interface/include/: mainwindow.hpp
weather_dashboard/interface/src/: main.cpp  mainwindow.cpp  moc_mainwindow.cpp
weather_dashboard/programming/: CMakeLists.txt  Makefile
weather_dashboard/programming/include/: weather_dashboard.hpp
weather_dashboard/programming/src/: main.cpp  weather_dashboard.cpp
